<resources>
    <string name="facebook_app_id">2237971439605559</string>
    <string name="fb_login_protocol_scheme">fb2237971439605559</string>
    <string name="app_name">NearbyMeApp</string>
    <string name="nav_radar">Radar</string>
    <string name="nav_lista">Lista</string>
    <string name="nav_perfil">Perfil</string>
    <string name="action_filter">Filter</string>
    <string name="action_cancel">Cancelar</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="dialog_filter_title">Categorias</string>
    <string name="dialog_filter_all">Todos</string>
    <string name="dialog_filter_airport">Aeroportos</string>
    <string name="dialog_filter_restaurant">Restaurantes</string>
    <string name="dialog_filter_nightclub">Baladas</string>
    <string name="dialog_filter_supermarket">Supermercados</string>
    <string name="dialog_filter_shopping">Shopping Centers</string>

    <string name="description_check_mark">Check mark</string>

    <string name="dialog_place_details_title">Nome do Local</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
