<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:orientation="vertical">

        <FrameLayout
                android:id="@+id/l_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">
            <TextView
                    android:text="@string/dialog_filter_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_all"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:id="@+id/check_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_black_24"
                    android:layout_gravity="end"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/l_airport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">
            <TextView
                    android:text="@string/dialog_filter_airport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_airport"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:id="@+id/check_airport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_black_24"
                    android:layout_gravity="end"
                    android:visibility="gone"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/l_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">
            <TextView
                    android:text="@string/dialog_filter_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_restaurant"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:id="@+id/check_restaurant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_black_24"
                    android:layout_gravity="end"
                    android:visibility="gone"/>
        </FrameLayout>

        <FrameLayout
                android:id="@+id/l_nightclub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true">
            <TextView
                    android:text="@string/dialog_filter_nightclub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_nightclub"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:id="@+id/check_nightclub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_black_24"
                    android:layout_gravity="end"
                    android:visibility="gone"/>
        </FrameLayout>

        <FrameLayout android:id="@+id/l_supermarket"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
                     android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:focusable="true">
            <TextView
                    android:text="@string/dialog_filter_supermarket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_supermarket"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:id="@+id/check_supermarket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_black_24"
                    android:layout_gravity="end"
                    android:visibility="gone"/>
        </FrameLayout>

        <FrameLayout android:id="@+id/l_shopping"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
                     android:background="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:focusable="true">
            <TextView
                    android:text="@string/dialog_filter_shopping"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_shopping"
                    android:layout_marginEnd="24dp"
                    android:layout_marginRight="24dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <ImageView
                    android:id="@+id/check_shopping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_check_black_24"
                    android:layout_gravity="end" android:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>
</FrameLayout>